[package]
name = "an-rope"
description = "an rope for large text documents."
version = "0.0.1"
authors = [ "Eliza Weisman <hi@hawkweisman.me>"
          , "Chris McDonald <mail.chris.mcdonald@gmail.com>"
          , "Rachel Leigh"]
repository = "https://github.com/hawkw/an-editor"
homepage = "https://github.com/hawkw/an-editor"
readme = "README.md"
license = "MIT"

[features]
# no features by default
default = []
with_tendrils = ["tendril"]
rebalance = []

[dependencies.tendril]
version = "0.2.3"
optional = true
